# MAVSDK-Java

./: .gitignore  .gitmodules  README.md
.github/workflows/: main.yml
examples/android-client/: build.gradle  gradle.properties  settings.gradle
examples/android-client/app/: build.gradle  lint.xml
examples/android-client/gradle/wrapper/: gradle-wrapper.properties
examples/java-client/: README.md  build.gradle  settings.gradle
examples/java-client/config/checkstyle/: checkstyle.xml
examples/java-client/gradle/wrapper/: gradle-wrapper.properties
mavsdk_server/: .gitignore  build.gradle  build.gradle.kts  settings.gradle  settings.gradle.kts
mavsdk_server/gradle/: libs.versions.toml
mavsdk_server/gradle/wrapper/: gradle-wrapper.properties
mavsdk_server/src/main/: AndroidManifest.xml
mavsdk_server/src/main/cpp/: CMakeLists.txt  native-lib.cpp
sdk/: README.md  build.gradle  build.gradle.kts  settings.gradle  settings.gradle.kts
sdk/config/checkstyle/: checkstyle.xml  suppressions.xml
sdk/dronecode-sdk/: settings.gradle
sdk/dronecore/: build.gradle  settings.gradle
sdk/dronecore-action/: settings.gradle
sdk/dronecore-core/: settings.gradle
sdk/dronecore-mission/: settings.gradle
sdk/dronecore-telemetry/: settings.gradle
sdk/dronecore/gradle/wrapper/: gradle-wrapper.properties
sdk/gradle/: libs.versions.toml
sdk/gradle/wrapper/: gradle-wrapper.properties
sdk/mavsdk/: settings.gradle
sdk/templates/: call.j2  enum.j2  file.j2  request.j2  stream.j2  struct.j2  type_conversions
tools/: version_validator.py
(+60 files in other folders)
